--- a/conf/cmi/field.field.paragraph.list_of_links.field_background_color.yml
+++ b/conf/cmi/field.field.paragraph.list_of_links.field_background_color.yml
@@ -1,19 +1,19 @@
-uuid: efaf2744-be5f-4e0b-a69f-a9adab18ddd0
+uuid: 4bf205fd-171d-4401-a9c9-3cf94dc74b6a
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.paragraph.field_background_color
-    - paragraphs.paragraphs_type.events_list
+    - paragraphs.paragraphs_type.list_of_links
     - taxonomy.vocabulary.colors
-id: paragraph.events_list.field_background_color
+id: paragraph.list_of_links.field_background_color
 field_name: field_background_color
 entity_type: paragraph
-bundle: events_list
+bundle: list_of_links
 label: 'Background color'
 description: 'Should only be used on Landing page.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
