--- a/conf/cmi/core.entity_view_display.media.video.media_library.yml
+++ b/conf/cmi/core.entity_view_display.media.video.media_library.yml
@@ -22,6 +22,8 @@ content:
     settings:
       image_link: ''
       image_style: thumbnail
+      image_loading:
+        attribute: lazy
     third_party_settings: {  }
     weight: 0
     region: content
@@ -30,4 +32,5 @@ hidden:
   field_media_video_file: true
   langcode: true
   name: true
+  search_api_excerpt: true
   uid: true
