THF-302: THF-302: Updated pathauto to use Menu title as default pattern. Added fallback.

--- a/conf/cmi/pathauto.pattern.article_content_pattern.yml
+++ b/conf/cmi/pathauto.pattern.article_content_pattern.yml
@@ -9,12 +9,12 @@ _core:
 id: article_content_pattern
 label: 'Article content pattern'
 type: 'canonical_entities:node'
-pattern: '[node:menu-link:parents:join-path]/[node:title]'
+pattern: '[node:menu-link:parents:join-path]/[node:menu-link:title]'
 selection_criteria:
-  02f068b0-826e-4d95-b8c0-a552a60d1ee6:
+  ac8350ec-f5c7-4761-9a43-ec7fef0f50f3:
     id: 'entity_bundle:node'
     negate: false
-    uuid: 02f068b0-826e-4d95-b8c0-a552a60d1ee6
+    uuid: ac8350ec-f5c7-4761-9a43-ec7fef0f50f3
     context_mapping:
       node: node
     bundles:
