--- a/conf/cmi/pathauto.pattern.page_content_pattern.yml
+++ b/conf/cmi/pathauto.pattern.page_content_pattern.yml
@@ -9,12 +9,12 @@ _core:
 id: page_content_pattern
 label: 'Page content pattern'
 type: 'canonical_entities:node'
-pattern: '[node:menu-link:parents:join-path]/[node:title]'
+pattern: '[node:menu-link:parents:join-path]/[node:menu-link:title]'
 selection_criteria:
-  c22ccdfa-0a1c-4d36-b456-dc0320d4351f:
+  b28025b2-4908-4608-ab63-f058e079981f:
     id: 'entity_bundle:node'
     negate: false
-    uuid: c22ccdfa-0a1c-4d36-b456-dc0320d4351f
+    uuid: b28025b2-4908-4608-ab63-f058e079981f
     context_mapping:
       node: node
     bundles:
