--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,7 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "drupal/coder": "^8.3",
         "drupal/core-dev": "^9.1",
+        "drupal/devel": "^4.1",
         "phpspec/prophecy-phpunit": "^2",
         "phpunit/phpunit": "~9.4.0"
     },
