--- a/conf/cmi/jsonapi_extras.jsonapi_resource_config.paragraph--events_list.yml
+++ b/conf/cmi/jsonapi_extras.jsonapi_resource_config.paragraph--events_list.yml
@@ -1,20 +1,18 @@
-uuid: 709636b0-fa31-4a0c-b4db-82263cc9405e
+uuid: 95e37fcf-6e66-4fd4-9a70-fab56731832e
 langcode: en
 status: true
 dependencies:
   config:
-    - paragraphs.paragraphs_type.text
+    - paragraphs.paragraphs_type.events_list
   module:
     - jsonapi_defaults
 third_party_settings:
   jsonapi_defaults:
-    default_include:
-      - field_text
     page_limit: 50
-id: paragraph--text
+id: paragraph--events_list
 disabled: false
-path: paragraph/text
-resourceType: paragraph--text
+path: paragraph/events_list
+resourceType: paragraph--events_list
 resourceFields:
   id:
     disabled: false
@@ -118,9 +116,33 @@ resourceFields:
     publicName: content_translation_changed
     enhancer:
       id: ''
-  field_text:
+  field_background_color:
     disabled: false
-    fieldName: field_text
-    publicName: field_text
+    fieldName: field_background_color
+    publicName: field_background_color
+    enhancer:
+      id: ''
+  field_event_tag_filter:
+    disabled: false
+    fieldName: field_event_tag_filter
+    publicName: field_event_tag_filter
+    enhancer:
+      id: ''
+  field_events_list_desc:
+    disabled: false
+    fieldName: field_events_list_desc
+    publicName: field_events_list_desc
     enhancer:
       id: text_field_enhancer
+  field_events_list_short:
+    disabled: false
+    fieldName: field_events_list_short
+    publicName: field_events_list_short
+    enhancer:
+      id: ''
+  field_title:
+    disabled: false
+    fieldName: field_title
+    publicName: field_title
+    enhancer:
+      id: ''
