--- a/conf/cmi/next.next_site.tyollisyyspalvelut_ui.yml
+++ b/conf/cmi/next.next_site.tyollisyyspalvelut_ui.yml
@@ -4,6 +4,6 @@ status: true
 dependencies: {  }
 id: tyollisyyspalvelut_ui
 label: 'Tyollisyyspalvelut UI'
-base_url: 'http://localhost:3000'
-preview_url: 'http://localhost:3000/api/preview'
+base_url: 'https://tyollisyyspalvelut.hel.ninja:3000'
+preview_url: 'https://tyollisyyspalvelut.hel.ninja/api/preview'
 preview_secret: 'Fk*RTBs6Pnk6nk*keft2zWEVrkWw_Yrm'
