--- a/conf/cmi/field.field.tpr_unit.tpr_unit.field_content.yml
+++ b/conf/cmi/field.field.tpr_unit.tpr_unit.field_content.yml
@@ -5,14 +5,13 @@ dependencies:
   config:
     - field.storage.tpr_unit.field_content
     - paragraphs.paragraphs_type.accordion
-    - paragraphs.paragraphs_type.banner
     - paragraphs.paragraphs_type.columns
-    - paragraphs.paragraphs_type.content_cards
-    - paragraphs.paragraphs_type.from_library
-    - paragraphs.paragraphs_type.gallery
+    - paragraphs.paragraphs_type.events_list
     - paragraphs.paragraphs_type.image
     - paragraphs.paragraphs_type.list_of_links
+    - paragraphs.paragraphs_type.notification
     - paragraphs.paragraphs_type.text
+    - paragraphs.paragraphs_type.unit_map
   module:
     - entity_reference_revisions
     - helfi_tpr
@@ -36,11 +35,10 @@ settings:
       columns: columns
       accordion: accordion
       image: image
-      gallery: gallery
       list_of_links: list_of_links
-      content_cards: content_cards
-      banner: banner
-      from_library: from_library
+      events_list: events_list
+      notification: notification
+      unit_map: unit_map
     negate: 0
     target_bundles_drag_drop:
       accordion:
@@ -51,30 +49,60 @@ settings:
         enabled: false
       banner:
         weight: -21
-        enabled: true
+        enabled: false
+      blog_list:
+        weight: 41
+        enabled: false
+      card:
+        weight: 42
+        enabled: false
+      card_list:
+        weight: 43
+        enabled: false
       columns:
         weight: -28
         enabled: true
       content_cards:
         weight: -23
+        enabled: false
+      content_liftup:
+        weight: 46
+        enabled: false
+      event_list:
+        weight: 47
+        enabled: false
+      events_list:
+        weight: 48
         enabled: true
       from_library:
         weight: 21
-        enabled: true
+        enabled: false
       gallery:
         weight: -25
-        enabled: true
+        enabled: false
       gallery_slide:
         weight: -20
         enabled: false
       hero:
         weight: -19
         enabled: false
+      highlighted_text:
+        weight: 53
+        enabled: false
       image:
         weight: -26
         enabled: true
+      info:
+        weight: 55
+        enabled: false
       liftup_with_image:
         weight: -18
+        enabled: false
+      link:
+        weight: 57
+        enabled: false
+      link_internal:
+        weight: 58
         enabled: false
       list_of_links:
         weight: -24
@@ -82,10 +110,49 @@ settings:
       list_of_links_item:
         weight: -17
         enabled: false
+      news_list:
+        weight: 61
+        enabled: false
+      notification:
+        weight: 62
+        enabled: true
+      phone_number_box:
+        weight: 63
+        enabled: false
+      quote:
+        weight: 64
+        enabled: false
+      remote_video:
+        weight: 65
+        enabled: false
+      search:
+        weight: 66
+        enabled: false
+      service_list:
+        weight: 67
+        enabled: false
+      sidebar_text:
+        weight: 68
+        enabled: false
+      subheading:
+        weight: 69
+        enabled: false
+      sujo_embedded:
+        weight: 70
+        enabled: false
       text:
         weight: -29
         enabled: true
+      unit_map:
+        weight: 73
+        enabled: true
       unit_search:
         weight: -16
+        enabled: false
+      units_list:
+        weight: 73
+        enabled: false
+      video:
+        weight: 74
         enabled: false
 field_type: entity_reference_revisions
