Updated component permissions.

--- a/conf/cmi/user.role.anonymous.yml
+++ b/conf/cmi/user.role.anonymous.yml
@@ -55,7 +55,9 @@ permissions:
   - 'view paragraph content subheading'
   - 'view paragraph content sujo_embedded'
   - 'view paragraph content text'
+  - 'view paragraph content unit_map'
   - 'view paragraph content unit_search'
+  - 'view paragraph content units_list'
   - 'view paragraph content video'
   - 'view tpr_service'
   - 'view tpr_unit'
