--- a/conf/cmi/user.role.authenticated.yml
+++ b/conf/cmi/user.role.authenticated.yml
@@ -123,7 +123,9 @@ permissions:
   - 'create paragraph content subheading'
   - 'create paragraph content sujo_embedded'
   - 'create paragraph content text'
+  - 'create paragraph content unit_map'
   - 'create paragraph content unit_search'
+  - 'create paragraph content units_list'
   - 'create paragraph content video'
   - 'create remote_video media'
   - 'create url aliases'
@@ -190,7 +192,9 @@ permissions:
   - 'delete paragraph content subheading'
   - 'delete paragraph content sujo_embedded'
   - 'delete paragraph content text'
+  - 'delete paragraph content unit_map'
   - 'delete paragraph content unit_search'
+  - 'delete paragraph content units_list'
   - 'delete paragraph content video'
   - 'edit any article content'
   - 'edit any audio media'
@@ -266,7 +270,9 @@ permissions:
   - 'update paragraph content subheading'
   - 'update paragraph content sujo_embedded'
   - 'update paragraph content text'
+  - 'update paragraph content unit_map'
   - 'update paragraph content unit_search'
+  - 'update paragraph content units_list'
   - 'update paragraph content video'
   - 'use advanced search'
   - 'use text format basic_html'
@@ -317,7 +323,9 @@ permissions:
   - 'view paragraph content subheading'
   - 'view paragraph content sujo_embedded'
   - 'view paragraph content text'
+  - 'view paragraph content unit_map'
   - 'view paragraph content unit_search'
+  - 'view paragraph content units_list'
   - 'view paragraph content video'
   - 'view the administration theme'
   - 'view tpr_service'
