--- a/conf/cmi/core.entity_view_display.node.event.default.yml
+++ b/conf/cmi/core.entity_view_display.node.event.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.node.event.field_last_modified_time
     - field.field.node.event.field_location
     - field.field.node.event.field_location_extra_info
+    - field.field.node.event.field_location_id
     - field.field.node.event.field_publisher
     - field.field.node.event.field_short_description
     - field.field.node.event.field_start_time
@@ -38,7 +39,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
   field_location_extra_info:
     type: string
@@ -46,7 +47,7 @@ content:
     settings:
       link_to_entity: false
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   links:
     settings: {  }
@@ -63,6 +64,7 @@ hidden:
   field_info_url: true
   field_last_modified_time: true
   field_location: true
+  field_location_id: true
   field_publisher: true
   field_short_description: true
   field_start_time: true
@@ -70,3 +72,4 @@ hidden:
   field_text: true
   langcode: true
   search_api_excerpt: true
+  toc_enabled: true
