--- a/conf/cmi/core.entity_view_display.node.event.teaser.yml
+++ b/conf/cmi/core.entity_view_display.node.event.teaser.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.node.event.field_last_modified_time
     - field.field.node.event.field_location
     - field.field.node.event.field_location_extra_info
+    - field.field.node.event.field_location_id
     - field.field.node.event.field_publisher
     - field.field.node.event.field_short_description
     - field.field.node.event.field_start_time
@@ -45,6 +46,7 @@ hidden:
   field_last_modified_time: true
   field_location: true
   field_location_extra_info: true
+  field_location_id: true
   field_publisher: true
   field_short_description: true
   field_start_time: true
@@ -52,3 +54,4 @@ hidden:
   field_text: true
   langcode: true
   search_api_excerpt: true
+  toc_enabled: true
