--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.6.7",
         "druidfi/omen": "^0.2.0",
-        "drupal/core-composer-scaffold": "^9.1",
-        "drupal/core-recommended": "^9.1",
+        "drupal/core-composer-scaffold": "9.4.7",
+        "drupal/core-recommended": "9.4.7",
         "drupal/easy_install": "^10.5",
         "drupal/gin": "3.0.0-beta5",
         "drupal/gin_toolbar": "1.0-beta22",
