--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "drupal/core-composer-scaffold": "9.4.7",
         "drupal/core-recommended": "9.4.7",
         "drupal/easy_install": "^10.5",
+        "drupal/entity_browser": "^2.8",
+        "drupal/focal_point": "^1.5",
         "drupal/gin": "3.0.0-beta5",
         "drupal/gin_toolbar": "1.0-beta22",
         "drupal/hdbt": "2.3.23",
