--- a/conf/cmi/core.entity_form_display.paragraph.hero.default.yml
+++ b/conf/cmi/core.entity_form_display.paragraph.hero.default.yml
@@ -3,6 +3,7 @@ langcode: fi
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image
     - field.field.paragraph.hero.field_custom_hero_image
     - field.field.paragraph.hero.field_hero_bg_color
     - field.field.paragraph.hero.field_hero_desc
@@ -13,7 +14,7 @@ dependencies:
     - field.field.paragraph.hero.field_hero_title
     - paragraphs.paragraphs_type.hero
   module:
-    - media_library
+    - entity_browser
     - text
 id: paragraph.hero.default
 targetEntityType: paragraph
@@ -21,11 +22,19 @@ bundle: hero
 mode: default
 content:
   field_custom_hero_image:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 1
     region: content
     settings:
-      media_types: {  }
+      entity_browser: image
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: false
+      open: false
+      field_widget_display_settings:
+        view_mode: media_library
+      selection_mode: selection_append
     third_party_settings: {  }
   field_hero_desc:
     type: text_textarea
