--- a/conf/cmi/pathauto.pattern.event_pattern_en.yml
+++ b/conf/cmi/pathauto.pattern.event_pattern_en.yml
@@ -8,20 +8,20 @@ dependencies:
 id: event_pattern_en
 label: 'Event pattern en'
 type: 'canonical_entities:node'
-pattern: 'events/[node:title]'
+pattern: 'current-matters/events/[node:title]'
 selection_criteria:
-  a9237037-a5c2-47cc-a8c8-4237ed02ddb3:
+  2e678efd-69ec-44db-8d15-29e0f6cea63c:
     id: 'entity_bundle:node'
     negate: false
-    uuid: a9237037-a5c2-47cc-a8c8-4237ed02ddb3
+    uuid: 2e678efd-69ec-44db-8d15-29e0f6cea63c
     context_mapping:
       node: node
     bundles:
       event: event
-  12ef7a56-f3a0-47ff-9343-023f55df5ee1:
+  c4d2dd5a-e097-4feb-9d3e-b368ed41b4ff:
     id: language
     negate: false
-    uuid: 12ef7a56-f3a0-47ff-9343-023f55df5ee1
+    uuid: c4d2dd5a-e097-4feb-9d3e-b368ed41b4ff
     context_mapping:
       language: 'node:langcode:language'
     langcodes:
