Add translation settings for paragraphs.

--- a/conf/cmi/field.field.paragraph.list_of_links.field_list_of_links_title.yml
+++ b/conf/cmi/field.field.paragraph.list_of_links.field_list_of_links_title.yml
@@ -14,7 +14,7 @@ bundle: list_of_links
 label: Title
 description: 'The title of the list of links paragraph.'
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
