--- a/conf/cmi/field.field.paragraph.notification.field_notification_description.yml
+++ b/conf/cmi/field.field.paragraph.notification.field_notification_description.yml
@@ -18,7 +18,7 @@ bundle: notification
 label: 'Notification description'
 description: ''
 required: true
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
