--- a/conf/cmi/field.field.paragraph.list_of_links.field_background_color.yml
+++ b/conf/cmi/field.field.paragraph.list_of_links.field_background_color.yml
@@ -13,7 +13,7 @@ bundle: list_of_links
 label: 'Background color'
 description: 'Should only be used on Landing page.'
 required: false
-translatable: true
+translatable: false
 default_value: {  }
 default_value_callback: ''
 settings:
