--- a/conf/cmi/field.field.paragraph.news_list.field_news_list_desc.yml
+++ b/conf/cmi/field.field.paragraph.news_list.field_news_list_desc.yml
@@ -18,7 +18,7 @@ bundle: news_list
 label: 'News list desc'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
