--- a/conf/cmi/field.field.paragraph.news_list.field_title.yml
+++ b/conf/cmi/field.field.paragraph.news_list.field_title.yml
@@ -12,7 +12,7 @@ bundle: news_list
 label: Title
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
