--- a/conf/cmi/field.field.paragraph.quote.field_quote_author_first_name.yml
+++ b/conf/cmi/field.field.paragraph.quote.field_quote_author_first_name.yml
@@ -12,7 +12,7 @@ bundle: quote
 label: 'Quote author first name'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
