--- a/conf/cmi/field.field.paragraph.sidebar_text.field_sidebar_text_text.yml
+++ b/conf/cmi/field.field.paragraph.sidebar_text.field_sidebar_text_text.yml
@@ -21,7 +21,7 @@ bundle: sidebar_text
 label: Text
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings: {  }
