--- a/conf/cmi/language.content_settings.paragraph.unit_search.yml
+++ b/conf/cmi/language.content_settings.paragraph.unit_search.yml
@@ -15,4 +15,4 @@ id: paragraph.unit_search
 target_entity_type_id: paragraph
 target_bundle: unit_search
 default_langcode: site_default
-language_alterable: false
+language_alterable: true
