Security updates Oct 22

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "cweagans/composer-patches": "^1.6.7",
         "druidfi/omen": "^0.2.0",
         "drupal/core-composer-scaffold": "9.4.7",
-        "drupal/core-recommended": "9.4.7",
+        "drupal/core-recommended": "^9.4",
         "drupal/easy_install": "^10.5",
         "drupal/entity_browser": "^2.8",
         "drupal/focal_point": "^1.5",
@@ -23,7 +23,7 @@
         "drupal/helfi_azure_fs": "^1.0",
         "drupal/helfi_hauki": "^1.0",
         "drupal/helfi_linkedevents": "^1.0",
-        "drupal/helfi_platform_config": "2.9.20",
+        "drupal/helfi_platform_config": "^2.13",
         "drupal/helfi_tpr": "^2.0",
         "drupal/helfi_tunnistamo": "^1.0",
         "drupal/jsonapi_extras": "^3.20",
