--- a/conf/cmi/core.extension.yml
+++ b/conf/cmi/core.extension.yml
@@ -112,6 +112,7 @@ module:
   serialization: 0
   shortcut: 0
   simple_oauth: 0
+  simple_sitemap: 0
   social_media: 0
   subrequests: 0
   system: 0
