THF-X: Add next extras module and revalidation settings.

--- a/conf/cmi/next.next_entity_type_config.node.event.yml
+++ b/conf/cmi/next.next_entity_type_config.node.event.yml
@@ -1,7 +1,13 @@
 uuid: 16aa5dcc-9064-4161-9ab4-73af03782401
 langcode: fi
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - next_extras
+third_party_settings:
+  next_extras:
+    revalidate: true
+    revalidate_paths: ''
 id: node.event
 site_resolver: site_selector
 configuration:
