--- a/conf/cmi/next.next_entity_type_config.node.article.yml
+++ b/conf/cmi/next.next_entity_type_config.node.article.yml
@@ -1,7 +1,13 @@
 uuid: 8b68cbdd-a024-4847-aa6a-6e4eb91ae37e
 langcode: fi
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - next_extras
+third_party_settings:
+  next_extras:
+    revalidate: true
+    revalidate_paths: ''
 id: node.article
 site_resolver: site_selector
 configuration:
