--- a/conf/cmi/next.next_entity_type_config.node.page.yml
+++ b/conf/cmi/next.next_entity_type_config.node.page.yml
@@ -1,7 +1,13 @@
 uuid: 5446516c-9da3-4e98-93ad-304ecb31af6a
 langcode: fi
 status: true
-dependencies: {  }
+dependencies:
+  module:
+    - next_extras
+third_party_settings:
+  next_extras:
+    revalidate: true
+    revalidate_paths: ''
 id: node.page
 site_resolver: site_selector
 configuration:
