THF-X: add landing page revalidation paths.

--- a/conf/cmi/next.next_entity_type_config.node.landing_page.yml
+++ b/conf/cmi/next.next_entity_type_config.node.landing_page.yml
@@ -7,7 +7,7 @@ dependencies:
 third_party_settings:
   next_extras:
     revalidate: true
-    revalidate_paths: /
+    revalidate_paths: "/\r\n/en\r\n/sv"
 id: node.landing_page
 site_resolver: site_selector
 configuration:
