--- a/conf/cmi/core.entity_form_display.node.event.default.yml
+++ b/conf/cmi/core.entity_form_display.node.event.default.yml
@@ -18,6 +18,7 @@ dependencies:
     - field.field.node.event.field_publisher
     - field.field.node.event.field_short_description
     - field.field.node.event.field_start_time
+    - field.field.node.event.field_street_address
     - field.field.node.event.field_tags
     - field.field.node.event.field_text
     - node.type.event
@@ -40,7 +41,7 @@ content:
     third_party_settings: {  }
   field_end_time:
     type: string_textfield
-    weight: 17
+    weight: 18
     region: content
     settings:
       size: 60
@@ -48,7 +49,7 @@ content:
     third_party_settings: {  }
   field_external_links:
     type: link_default
-    weight: 25
+    weight: 27
     region: content
     settings:
       placeholder_url: ''
@@ -64,7 +65,7 @@ content:
     third_party_settings: {  }
   field_image_alt:
     type: string_textfield
-    weight: 14
+    weight: 15
     region: content
     settings:
       size: 60
@@ -72,7 +73,7 @@ content:
     third_party_settings: {  }
   field_image_name:
     type: string_textfield
-    weight: 12
+    weight: 13
     region: content
     settings:
       size: 60
@@ -80,7 +81,7 @@ content:
     third_party_settings: {  }
   field_image_url:
     type: string_textfield
-    weight: 13
+    weight: 14
     region: content
     settings:
       size: 60
@@ -88,7 +89,7 @@ content:
     third_party_settings: {  }
   field_in_language:
     type: string_textfield
-    weight: 15
+    weight: 16
     region: content
     settings:
       size: 60
@@ -96,7 +97,7 @@ content:
     third_party_settings: {  }
   field_info_url:
     type: string_textfield
-    weight: 24
+    weight: 26
     region: content
     settings:
       size: 60
@@ -104,7 +105,7 @@ content:
     third_party_settings: {  }
   field_last_modified_time:
     type: string_textfield
-    weight: 18
+    weight: 19
     region: content
     settings:
       size: 60
@@ -112,7 +113,7 @@ content:
     third_party_settings: {  }
   field_location:
     type: string_textfield
-    weight: 19
+    weight: 20
     region: content
     settings:
       size: 60
@@ -120,7 +121,7 @@ content:
     third_party_settings: {  }
   field_location_extra_info:
     type: string_textfield
-    weight: 21
+    weight: 23
     region: content
     settings:
       size: 60
@@ -128,14 +129,14 @@ content:
     third_party_settings: {  }
   field_location_id:
     type: number
-    weight: 20
+    weight: 22
     region: content
     settings:
       placeholder: ''
     third_party_settings: {  }
   field_publisher:
     type: string_textfield
-    weight: 22
+    weight: 24
     region: content
     settings:
       size: 60
@@ -143,7 +144,7 @@ content:
     third_party_settings: {  }
   field_short_description:
     type: text_textarea
-    weight: 11
+    weight: 12
     region: content
     settings:
       rows: 5
@@ -151,7 +152,15 @@ content:
     third_party_settings: {  }
   field_start_time:
     type: string_textfield
-    weight: 16
+    weight: 17
+    region: content
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+  field_street_address:
+    type: string_textfield
+    weight: 21
     region: content
     settings:
       size: 60
@@ -159,7 +168,7 @@ content:
     third_party_settings: {  }
   field_tags:
     type: options_select
-    weight: 23
+    weight: 25
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -193,7 +202,12 @@ content:
     third_party_settings: {  }
   publish_on:
     type: datetime_timestamp_no_default
-    weight: 26
+    weight: 28
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  simple_sitemap:
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -220,7 +234,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -236,12 +250,12 @@ content:
     third_party_settings: {  }
   unpublish_on:
     type: datetime_timestamp_no_default
-    weight: 27
+    weight: 29
     region: content
     settings: {  }
     third_party_settings: {  }
   url_redirects:
-    weight: 28
+    weight: 30
     region: content
     settings: {  }
     third_party_settings: {  }
