--- a/conf/cmi/search_api.index.events_fi.yml
+++ b/conf/cmi/search_api.index.events_fi.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.storage.node.field_location
     - field.storage.node.field_location_extra_info
     - field.storage.node.field_start_time
+    - field.storage.node.field_street_address
     - field.storage.node.field_tags
     - field.storage.node.field_text
     - search_api.server.elastic
@@ -77,6 +78,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_start_time
+  field_street_address:
+    label: 'Street address'
+    datasource_id: 'entity:node'
+    property_path: field_street_address
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_street_address
   field_tags:
     label: Tags
     datasource_id: 'entity:node'
