--- a/conf/cmi/core.entity_view_display.node.event.default.yml
+++ b/conf/cmi/core.entity_view_display.node.event.default.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.field.node.event.field_end_time
+    - field.field.node.event.field_event_status
     - field.field.node.event.field_external_links
     - field.field.node.event.field_id
     - field.field.node.event.field_image_alt
@@ -57,6 +58,7 @@ content:
     region: content
 hidden:
   field_end_time: true
+  field_event_status: true
   field_id: true
   field_image_alt: true
   field_image_name: true
