--- a/conf/cmi/core.entity_view_display.node.event.teaser.yml
+++ b/conf/cmi/core.entity_view_display.node.event.teaser.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - core.entity_view_mode.node.teaser
     - field.field.node.event.field_end_time
+    - field.field.node.event.field_event_status
     - field.field.node.event.field_external_links
     - field.field.node.event.field_id
     - field.field.node.event.field_image_alt
@@ -37,6 +38,7 @@ content:
     region: content
 hidden:
   field_end_time: true
+  field_event_status: true
   field_external_links: true
   field_id: true
   field_image_alt: true
