--- a/conf/cmi/search_api.index.events_fi.yml
+++ b/conf/cmi/search_api.index.events_fi.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_end_time
+    - field.storage.node.field_event_status
     - field.storage.node.field_id
     - field.storage.node.field_image_alt
     - field.storage.node.field_image_url
@@ -30,6 +31,14 @@ field_settings:
     dependencies:
       config:
         - field.storage.node.field_end_time
+  field_event_status:
+    label: 'Event status'
+    datasource_id: 'entity:node'
+    property_path: field_event_status
+    type: string
+    dependencies:
+      config:
+        - field.storage.node.field_event_status
   field_id:
     label: Id
     datasource_id: 'entity:node'
