--- a/conf/cmi/search_api.index.landings_en.yml
+++ b/conf/cmi/search_api.index.landings_en.yml
@@ -7,8 +7,8 @@ dependencies:
     - field.storage.paragraph.field_hero_desc
     - search_api.server.elastic
   module:
-    - node
     - paragraphs
+    - node
     - search_api
 id: landings_en
 name: 'Landings EN'
@@ -71,7 +71,7 @@ processor_settings:
     weights:
       preprocess_index: -15
       preprocess_query: -15
-    all_fields: false
+    all_fields: true
     fields:
       - entity_type
       - field_lead_in
@@ -82,12 +82,10 @@ processor_settings:
     alt: true
     tags:
       b: 2
-      em: 1
       h1: 5
       h2: 3
       h3: 2
       strong: 2
-      u: 1
   language_with_fallback: {  }
   rendered_item: {  }
 tracker_settings:
