--- a/conf/cmi/search_api.index.units_en.yml
+++ b/conf/cmi/search_api.index.units_en.yml
@@ -5,15 +5,15 @@ dependencies:
   config:
     - field.storage.paragraph.field_accordion_text
     - field.storage.tpr_unit.field_content
+    - field.storage.paragraph.field_accordion_title
     - field.storage.paragraph.field_card_text
     - field.storage.paragraph.field_info_text
     - field.storage.paragraph.field_pb_text
     - field.storage.paragraph.field_text
-    - field.storage.paragraph.field_accordion_title
     - search_api.server.elastic
   module:
-    - helfi_tpr
     - paragraphs
+    - helfi_tpr
     - search_api
 id: units_en
 name: 'Units EN'
@@ -131,6 +131,33 @@ processor_settings:
   aggregated_field: {  }
   entity_status: {  }
   entity_type: {  }
+  html_filter:
+    weights:
+      preprocess_index: -15
+      preprocess_query: -15
+    all_fields: true
+    fields:
+      - entity_type
+      - field_accordion_text
+      - field_accordion_title
+      - field_card_text
+      - field_description
+      - field_info_text
+      - field_pb_text
+      - field_text
+      - name
+      - title
+      - url
+    title: true
+    alt: true
+    tags:
+      b: 2
+      em: 1
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      u: 1
   language_with_fallback: {  }
   rendered_item: {  }
 tracker_settings:
